--- a/freitas-portifolio/package.json
+++ b/freitas-portifolio/package.json
@@ -9,7 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "framer-motion": "^12.16.0",
     "freitas-portifolio": "file:",
+    "keen-slider": "^6.8.6",
+    "lucide-react": "^0.513.0",
     "next": "15.3.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
