feat fix: ajuste na configuração do loop do projeto no package.json, acressimo de extensão de arquivos de leitura

--- a/freitas-portifolio/package.json
+++ b/freitas-portifolio/package.json
@@ -10,21 +10,20 @@
   },
   "dependencies": {
     "framer-motion": "^12.16.0",
-    "freitas-portifolio": "file:",
     "keen-slider": "^6.8.6",
     "lucide-react": "^0.513.0",
     "next": "15.3.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
-    "sharp": "^0.34.2"
+    "sharp": "^0.34.2",
+    "tailwindcss": "^4",
+    "@tailwindcss/postcss": "^4"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "tailwindcss": "^4",
     "typescript": "^5"
   }
 }
